test/files/neg/t3275.check
t3275.scala:2: error: @tailrec annotated method contains no recursive calls
  @annotation.tailrec def foo() = 5
                          ^
one error found
